--- a/comoFunciona.html
+++ b/comoFunciona.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dnotas</title>
+    <title>EnvioDocs</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -69,13 +69,12 @@
                         <h1>Como funciona?</h1>
                     </div>
                     <div class="paragrafo-inicio" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                        <p>1. Levantamos o seu Estoque Contábil, com base na conferência quantitativa dos itens constantes nos seus arquivos Sintegra. Além disso, consultamos as suas notas de entrada e incluímos elas no seu estoque..</p>
+                        <p>1. Liberamos o Site para sua Contabilidade e o App para seus clientes</p>
                         <br>
-                        <p>2. Emitimos todas as suas notas fiscais (NF-e, NFC-e, devoluções). E mantemos a comunição sempre ativa através do grupo no Whatsapp. .</p>
+                        <p>2. Com o site você tera controle sobre os codumentos enviados para seu clientes e sobre os comprovates dos pagamentos de seus honoriros e etc</p>
                             <br>
-                            <p>3. Confererimos as suas vendas realizadas no cartão diariamente. Fazemos o cruzamentos dos valores da operadora de cartão com os valores das notas fiscais emitidas.</p>
-                            <br>
-                            <p>4. Disponibilizamos um portal de acesso para o seu Contador revisar e definir corretamente a substituição tributária (NCM e CEST) dos seus produtos, além de poder gerar os relatórios mensais e o envio dos arquivos XMLs por e-mail.</p>
+                            <p>3. Com o app seus clientes poderam visualizar os seus respectivos Boletos, documentos e etc</p>
+                           
                             <br>
             </div>
         </main>
@@ -89,16 +88,13 @@
                 </div>
                 <div class="footer-column menu-column">
                     <ul class="social-links">
-                        <li><a href="index.html"><i class=""></i> Dnotas </a></li>
-                        <li><a href="quemSomos.html"><i class=""></i> Quem somos </a></li>
+                        <li><a href="index.html"><i class=""></i> EnvioDocs </a></li>
                         <li><a href="comoFunciona.html"><i class=""></i> Como funciona</a></li>
-                        <li><a href="ContadorParceiro.html"><i class=""></i> Contador Parceiro</a></li>
+                       
                     </ul>
                 </div>
                 <div class="footer-column social-column">
                     <ul class="social-links">
-                        <li><a href="https://www.instagram.com/dnotas_bpo/"><i class="bi bi-instagram"></i> Instagram</a></li>
-                        <li><a href="https://www.youtube.com/@DiDSistemasInteligentes/featured"><i class="bi bi-youtube"></i> YouTube</a></li>
                     </ul>
                 </div>
             </div>
