--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                     <ul class="social-links">
                         <li><a href="index.html"><i class=""></i> EnvioDocs </a></li>
                         <li><a href="comoFunciona.html"><i class=""></i> Como funciona</a></li>
+                        <li><a href="https://enviodocs.flutterflow.app"><i class=""></i> Site enviaDocs para comtabilidades</a></li>
 
                     </ul>
                 </div>
