--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                     </div>
                     <div class="descricao-contato">
                         <ul class="lista-contato">
-                            <li><a href="#">WhatsApp: (37) 9197-9016</a></li>
-                            <li><a href="#">enviodocs.suporte@gmail.com</a></li>
-                            <li><a href="#">Avenida Raja Gabália, 1093, 7º andar, Luxemburgo, CEP: 30.380-403  </a></li>
+                            <li><a href="#">WhatsApp: (37) 99949-5691</a></li>
+                            <li><a href="#">suporte@enviodocs.com.br</a></li>
+                            <li><a href="#">Rua Doutor Miguel Gontijo, 181, Centro,Bom despacho CEP: 35630-016  </a></li>
                         </ul>
                     </div>
                 </div>
