--- a/contrato.html
+++ b/contrato.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Enviar de Contrato Social</h1>
+    <h1> Contrato Social</h1>
     <form id="uploadForm">
       <input type="text" id="nome" placeholder="Digite o Nome do Cliente" required>
       <input type="text" id="cnpj" placeholder="Digite o CNPJ" required maxlength="18">
@@ -86,7 +86,6 @@
     document.getElementById('uploadForm').addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      // Capturar os valores do formulário
       const nome = document.getElementById('nome').value;
       const cnpj = document.getElementById('cnpj').value;
       const fileInput = document.getElementById('file');
@@ -97,38 +96,38 @@
         return;
       }
 
-      // Criar um objeto FormData
       const formData = new FormData();
       formData.append('nome', nome);
       formData.append('cnpj', cnpj);
       formData.append('file', file);
 
-      // Fazer a requisição para a API
       const responseMessage = document.getElementById('responseMessage');
       responseMessage.innerText = 'Enviando...';
 
       try {
-        const response = await fetch('http://54.164.48.201:3000/upload-contrato', {
+        console.log('Enviando dados para a API...');
+        const response = await fetch('https://cors-anywhere.herokuapp.com/http://54.164.48.201:3000/upload-contrato', {
           method: 'POST',
           body: formData,
         });
 
         if (response.ok) {
           const data = await response.json();
+          console.log('Resposta da API:', data);
           responseMessage.innerText = `Sucesso: ${data.message}`;
           responseMessage.style.color = 'green';
         } else {
           const errorData = await response.json();
+          console.error('Erro da API:', errorData);
           responseMessage.innerText = `Erro: ${errorData.error}`;
           responseMessage.style.color = 'red';
         }
       } catch (error) {
         console.error('Erro ao enviar:', error);
-        responseMessage.innerText = 'Enviado com sucesso';
-        responseMessage.style.color = 'green';
+        responseMessage.innerText = 'Erro ao enviar. Tente novamente.';
+        responseMessage.style.color = 'red';
       }
     });
-    
   </script>
 </body>
 </html>
