--- a/contrato.html
+++ b/contrato.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enviar Contrato</title>
+  <title>Contrato Social</title>
   <style>
     body {
       margin: 0;
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> Contrato Social</h1>
+    <h1>Contrato Social</h1>
     <form id="uploadForm">
       <input type="text" id="nome" placeholder="Digite o Nome do Cliente" required>
       <input type="text" id="cnpj" placeholder="Digite o CNPJ" required maxlength="18">
@@ -66,23 +66,6 @@
   </div>
 
   <script>
-    // Função para aplicar a máscara de CNPJ
-    function maskCNPJ(value) {
-      return value
-        .replace(/\D/g, '') // Remove todos os caracteres não numéricos
-        .replace(/^(\d{2})(\d)/, '$1.$2') // Adiciona o primeiro ponto
-        .replace(/^(\d{2})\.(\d{3})(\d)/, '$1.$2.$3') // Adiciona o segundo ponto
-        .replace(/\.(\d{3})(\d)/, '.$1/$2') // Adiciona a barra
-        .replace(/(\d{4})(\d)/, '$1-$2') // Adiciona o traço
-        .substring(0, 18); // Garante que o valor não ultrapasse 18 caracteres
-    }
-
-    // Adicionar evento ao campo CNPJ para aplicar a máscara
-    const cnpjInput = document.getElementById('cnpj');
-    cnpjInput.addEventListener('input', (e) => {
-      e.target.value = maskCNPJ(e.target.value);
-    });
-
     document.getElementById('uploadForm').addEventListener('submit', async (e) => {
       e.preventDefault();
 
@@ -105,23 +88,18 @@
       responseMessage.innerText = 'Enviando...';
 
       try {
-        console.log('Enviando dados para a API...');
-        const response = await fetch('https://cors-anywhere.herokuapp.com/http://54.164.48.201:3000/upload-contrato', {
+        console.log('Enviando dados para API:', { nome, cnpj, file });
+
+        const response = await fetch('http://54.164.48.201:3000/upload-contrato', {
           method: 'POST',
+          mode: 'no-cors', // Ignora CORS
           body: formData,
         });
 
-        if (response.ok) {
-          const data = await response.json();
-          console.log('Resposta da API:', data);
-          responseMessage.innerText = `Sucesso: ${data.message}`;
-          responseMessage.style.color = 'green';
-        } else {
-          const errorData = await response.json();
-          console.error('Erro da API:', errorData);
-          responseMessage.innerText = `Erro: ${errorData.error}`;
-          responseMessage.style.color = 'red';
-        }
+        // Atualiza a mensagem sem verificar o status da resposta
+        responseMessage.innerText = 'Requisição enviada. Verifique o status diretamente na API.';
+        responseMessage.style.color = 'blue';
+
       } catch (error) {
         console.error('Erro ao enviar:', error);
         responseMessage.innerText = 'Erro ao enviar. Tente novamente.';
