--- a/contrato.html
+++ b/contrato.html
@@ -60,7 +60,7 @@
       <input type="text" id="nome" placeholder="Digite o Nome do Cliente" required>
       <input type="text" id="cnpj" placeholder="Digite o CNPJ" required maxlength="18">
       <input type="file" id="file" accept=".pdf" required>
-      <button type="submit">Enviar</button>
+      <button type="submit">ENVIAR</button>
     </form>
     <p id="responseMessage" style="margin-top: 15px; color: #333;"></p>
   </div>
