--- a/contrato.html
+++ b/contrato.html
@@ -51,6 +51,20 @@
     button:hover {
       background-color: #45a049;
     }
+    #loader {
+      display: none;
+      margin: 10px auto;
+      width: 30px;
+      height: 30px;
+      border: 3px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 3px solid #4CAF50;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
@@ -60,24 +74,23 @@
       <input type="text" id="nome" placeholder="Digite o Nome do Cliente" required>
       <input type="text" id="cnpj" placeholder="Digite o CNPJ" required maxlength="18">
       <input type="file" id="file" accept=".pdf" required>
-      <button type="submit">Enviar</button>
+      <button type="submit">Enviar Contrato</button>
     </form>
+    <div id="loader"></div>
     <p id="responseMessage" style="margin-top: 15px; color: #333;"></p>
   </div>
 
   <script>
-    // Função para aplicar a máscara de CNPJ
     function maskCNPJ(value) {
       return value
-        .replace(/\D/g, '') // Remove todos os caracteres não numéricos
-        .replace(/^(\d{2})(\d)/, '$1.$2') // Adiciona o primeiro ponto
-        .replace(/^(\d{2})\.(\d{3})(\d)/, '$1.$2.$3') // Adiciona o segundo ponto
-        .replace(/\.(\d{3})(\d)/, '.$1/$2') // Adiciona a barra
-        .replace(/(\d{4})(\d)/, '$1-$2') // Adiciona o traço
-        .substring(0, 18); // Garante que o valor não ultrapasse 18 caracteres
+        .replace(/\D/g, '')
+        .replace(/^(\d{2})(\d)/, '$1.$2')
+        .replace(/^(\d{2})\.(\d{3})(\d)/, '$1.$2.$3')
+        .replace(/\.(\d{3})(\d)/, '.$1/$2')
+        .replace(/(\d{4})(\d)/, '$1-$2')
+        .substring(0, 18);
     }
 
-    // Adicionar evento ao campo CNPJ para aplicar a máscara
     const cnpjInput = document.getElementById('cnpj');
     cnpjInput.addEventListener('input', (e) => {
       e.target.value = maskCNPJ(e.target.value);
@@ -90,6 +103,8 @@
       const cnpj = document.getElementById('cnpj').value;
       const fileInput = document.getElementById('file');
       const file = fileInput.files[0];
+      const loader = document.getElementById('loader');
+      const responseMessage = document.getElementById('responseMessage');
 
       if (!file) {
         alert('Por favor, selecione um arquivo PDF.');
@@ -101,16 +116,16 @@
       formData.append('cnpj', cnpj);
       formData.append('file', file);
 
-      const responseMessage = document.getElementById('responseMessage');
-      responseMessage.innerText = 'Enviando...';
+      responseMessage.innerText = '';
+      loader.style.display = 'block';
 
       try {
-        console.log('Enviando dados para a API...');
-        const response = await fetch('http://54.164.48.201:3000/upload-contrato', {
-  method: 'POST',
-  mode: 'no-cors', // Ignora CORS
-  body: formData,
-});
+        const response = await fetch(`https://cors-anywhere.herokuapp.com/http://54.164.48.201:3000/upload-contrato`, {
+          method: 'POST',
+          body: formData,
+        });
+
+        loader.style.display = 'none';
 
         if (response.ok) {
           const data = await response.json();
@@ -124,6 +139,7 @@
           responseMessage.style.color = 'red';
         }
       } catch (error) {
+        loader.style.display = 'none';
         console.error('Erro ao enviar:', error);
         responseMessage.innerText = 'Erro ao enviar. Tente novamente.';
         responseMessage.style.color = 'red';
