--- a/contrato.html
+++ b/contrato.html
@@ -74,7 +74,7 @@
       <input type="text" id="nome" placeholder="Digite o Nome do Cliente" required>
       <input type="text" id="cnpj" placeholder="Digite o CNPJ" required maxlength="18">
       <input type="file" id="file" accept=".pdf" required>
-      <button type="submit">Enviar</button>
+      <button type="submit">Enviar Contrato</button>
     </form>
     <div id="loader"></div>
     <p id="responseMessage" style="margin-top: 15px; color: #333;"></p>
@@ -120,11 +120,10 @@
       loader.style.display = 'block';
 
       try {
-    const response = await fetch('http://54.164.48.201:3000/upload-contrato', {
-        method: 'POST',
-        body: formData,
-    });
-
+        const response = await fetch(`https://cors-anywhere.herokuapp.com/http://54.164.48.201:3000/upload-contrato`, {
+          method: 'POST',
+          body: formData,
+        });
 
         loader.style.display = 'none';
 
