--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@
                 <!--Slide Sobre-->
                 <div class="headline-sobre" data-aos="fade-up" data-aos-duration="1000">
                     <div class="headline-scroll" id="headline-scroll">
-                        <span class="bold">Envios de documentos contabeis</span>
+                        <span class="bold">Experiência</span>
                         <span class="divisor"></span>
-                        <span class="light">Organizador de documentos</span>
+                        <span class="light">Compromisso</span>
+                        <span class="divisor"></span>
+                        <span class="bold">Valor</span>
+                        <span class="divisor"></span>
+                        <span class="light">Segurança</span>
                         <span class="divisor"></span>
                     </div>
                 </div>
@@ -264,21 +268,13 @@
             <div class="container-contato" data-aos="fade-up" data-aos-duration="1000">
                 <div class="headline-contato" data-aos="fade-up" data-aos-delay="200">
                     <div class="titulo-contato">
-                        <h1>Contato</h1>
                     </div>
                     <div class="descricao-contato">
-                        <ul class="lista-contato">
-                            <li><a href="#">WhatsApp: (37) 99949-5691</a></li>
-                            <li><a href="#">suporte@enviodocs.com.br</a></li>
-                            <li><a href="#">Rua Doutor Miguel Gontijo, 181, Centro,Bom despacho CEP: 35630-016  </a></li>
-                        </ul>
                     </div>
                 </div>
                 <div class="conteudo-contato" data-aos="fade-up" data-aos-delay="400">
                     <div class="formulario-contato">
                         <h2>Entre em contato</h2>
-                        <p>E nunca mais perca tempo com envio de documentos e desorganização</p>
-                        
                         <form class="form">
                             <label for="name"></label>
                             <input type="text"  id="name" requiredrequired placeholder="Nome*"> <!-- Correspondente ao {{name}} no template -->
@@ -329,8 +325,10 @@
                 </div>
             </div>
             <div class="footer-column credits-column">
-                <p>&copy; 2024 Todos os direitos reservados.</p>
-                <p>Desenvolvido por William Martins│Dev.</p>
+            </p>suporte@enviodocs.com.br</p>
+            </p>Rua Doutor Miguel Gontijo, 181, Centro,Bom despacho CEP: 35630-016 </p>
+            <p> <p>
+            <p>Desenvolvido por William Martins│Dev.</p>
             </div>
         </footer>
         <!--Fim Footer-->
