--- a/folder.html
+++ b/folder.html
@@ -94,7 +94,7 @@
     </div>
     <div class="explorer-content">
         <div class="explorer-panel">
-            <p>Arraste e solte os arquivos aqui ou clique para selecionar.</p>
+            <p>Arrasteeee e solte os arquivos aqui ou clique para selecionar.</p>
             <form id="uploadForm" enctype="multipart/form-data" class="upload-form">
                 <label for="file" class="upload-label">
                     Escolher Arquivo
@@ -121,10 +121,11 @@
             formData.append("file", fileInput.files[0]);
     
             try {
-                const response = await fetch("http://54.164.48.201:3000/upload-to-shared-folder", {
-                    method: "POST",
-                    body: formData,
-                });
+                const response = await fetch("https://54.164.48.201:3000/upload-to-shared-folder", {
+    method: "POST",
+    body: formData,
+});
+
     
                 if (!response.ok) {
                     throw new Error("Erro ao enviar o arquivo.");
