--- a/folder.html
+++ b/folder.html
@@ -100,7 +100,7 @@
     </div>
     <div class="explorer-content">
         <div class="explorer-panel">
-            <p>Arraste e solte os arquivos aqui ou clique para selecionar.</p>
+            <p>AAArraste e solte os arquivos aqui ou clique para selecionar.</p>
             <form id="uploadForm" enctype="multipart/form-data" class="upload-form">
                 <label for="file" class="upload-label">
                     Escolher Arquivo
@@ -127,7 +127,7 @@
             formData.append("file", fileInput.files[0]);
     
             try {
-                const response = await fetch("http://54.164.48.201:3000/upload-to-shared-folder", {
+                const response = await fetch("https://54.164.48.201:3000/upload-to-shared-folder", {
                     method: "POST",
                     body: formData,
                 });
