--- a/contrato.html
+++ b/contrato.html
@@ -120,7 +120,7 @@
       loader.style.display = 'block';
 
       try {
-    const response = await fetch('http://54.164.48.201:3000/upload-contrato', {
+    const response = await fetch('https://api.enviodocs.com.br:3000/upload-contrato', {
         method: 'POST',
         body: formData,
     });
