--- a/folder.html
+++ b/folder.html
@@ -121,7 +121,7 @@
             formData.append("file", fileInput.files[0]);
     
             try {
-                const response = await fetch("https://54.164.48.201:3000/upload-to-shared-folder", {
+                const response = await fetch("https://api.enviodocs.com.br:3000/upload-to-shared-folder", {
                     method: "POST",
                     body: formData,
                 });
