--- a/folder.html
+++ b/folder.html
@@ -94,7 +94,7 @@
     </div>
     <div class="explorer-content">
         <div class="explorer-panel">
-            <p>AAArraste e solte os arquivos aqui ou clique para selecionar.</p>
+            <p>Arraste e solte os arquivos aqui ou clique para selecionar.</p>
             <form id="uploadForm" enctype="multipart/form-data" class="upload-form">
                 <label for="file" class="upload-label">
                     Escolher Arquivo
