--- a/contrato.html
+++ b/contrato.html
@@ -71,7 +71,7 @@
   <div class="container">
     <h1> Contrato Social</h1>
     <form id="uploadForm">
-      <input type="text" id="nome" placeholder="Digite o Nome do Cliente" required>
+      <input type="text" id="nome" placeholder="Insira o nome do documento" required>
       <input type="text" id="cnpj" placeholder="Digite o CNPJ" required maxlength="18">
       <input type="file" id="file" accept=".pdf" required>
       <button type="submit">Enviar</button>
@@ -81,6 +81,7 @@
   </div>
 
   <script>
+    // Função para mascarar o CNPJ
     function maskCNPJ(value) {
       return value
         .replace(/\D/g, '')
@@ -91,11 +92,31 @@
         .substring(0, 18);
     }
 
+    // Preenche o CNPJ automaticamente ao carregar a página
+    async function fetchAndFillCNPJ() {
+  try {
+    // Faz uma requisição para buscar o último CNPJ armazenado
+    const response = await fetch('https://api.enviodocs.com.br:3000/get-last-cnpj');
+
+    if (response.ok) {
+      const data = await response.json();
+      // Define o CNPJ no campo
+      document.getElementById('cnpj').value = maskCNPJ(data.cnpj);
+    } else {
+      console.error('Erro ao buscar o último CNPJ:', await response.json());
+    }
+  } catch (error) {
+    console.error('Erro na requisição:', error);
+  }
+}
+
+    // Adiciona a máscara de CNPJ enquanto o usuário digita
     const cnpjInput = document.getElementById('cnpj');
     cnpjInput.addEventListener('input', (e) => {
       e.target.value = maskCNPJ(e.target.value);
     });
 
+    // Evento para enviar o formulário
     document.getElementById('uploadForm').addEventListener('submit', async (e) => {
       e.preventDefault();
 
@@ -120,11 +141,10 @@
       loader.style.display = 'block';
 
       try {
-    const response = await fetch('https://api.enviodocs.com.br:3000/upload-contrato', {
-        method: 'POST',
-        body: formData,
-    });
-
+        const response = await fetch('https://api.enviodocs.com.br:3000/upload-contrato', {
+          method: 'POST',
+          body: formData,
+        });
 
         loader.style.display = 'none';
 
@@ -146,6 +166,9 @@
         responseMessage.style.color = 'red';
       }
     });
+
+    // Chama a função para buscar e preencher o CNPJ ao carregar a página
+    window.onload = fetchAndFillCNPJ;
   </script>
 </body>
 </html>
