--- a/contrato.html
+++ b/contrato.html
@@ -84,22 +84,28 @@
   <script>
     // Função para buscar e preencher o CNPJ ao carregar a página
     async function fetchAndFillCNPJ() {
-      try {
-        // Faz uma requisição para buscar o último CNPJ armazenado
-        const response = await fetch('https://api.enviodocs.com.br:3000/get-last-cnpj');
+  try {
+    // Faz uma requisição para buscar o último CNPJ armazenado
+    const response = await fetch('https://api.enviodocs.com.br:3000/get-last-cnpj');
 
-        if (response.ok) {
-          const data = await response.json();
-          // Define o CNPJ no campo oculto
-          document.getElementById('cnpj').value = data.cnpj;
-        } else {
-          console.error('Erro ao buscar o último CNPJ:', await response.json());
-        }
-      } catch (error) {
-        console.error('Erro na requisição:', error);
+    if (response.ok) {
+      const data = await response.json();
+      let cnpj = data.cnpj;
+
+      // Remove chaves "{}" caso existam
+      if (cnpj.startsWith('{') && cnpj.endsWith('}')) {
+        cnpj = cnpj.slice(1, -1); // Remove o primeiro e o último caractere
       }
-    }
 
+      // Define o CNPJ no campo oculto
+      document.getElementById('cnpj').value = maskCNPJ(cnpj);
+    } else {
+      console.error('Erro ao buscar o último CNPJ:', await response.json());
+    }
+  } catch (error) {
+    console.error('Erro na requisição:', error);
+  }
+}
     // Evento para enviar o formulário
     document.getElementById('uploadForm').addEventListener('submit', async (e) => {
       e.preventDefault();
