--- a/contrato.html
+++ b/contrato.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> Documento</h1>
+    <h1> Documentos</h1>
     <form id="uploadForm">
       <input type="text" id="nome" placeholder="Insira o nome do documento" required>
       <!-- Campo de CNPJ oculto -->
