--- a/folder.html
+++ b/folder.html
@@ -90,7 +90,7 @@
 </head>
 <body class="explorer-container">
     <div class="explorer-header">
-        <h1 class="explorer-title">Upload de Arquivos</h1>
+        <h1 class="explorer-title">Uploadd de Arquivos</h1>
     </div>
     <div class="explorer-content">
         <div class="explorer-panel">
