--- a/folder.html
+++ b/folder.html
@@ -86,6 +86,16 @@
             background: #f8d7da;
             color: #721c24;
         }
+
+        .file-info {
+            margin-top: 10px;
+            padding: 10px;
+            background: #f1f1f1;
+            border-radius: 5px;
+            text-align: left;
+            font-size: 0.9em;
+            color: #555;
+        }
     </style>
 </head>
 <body class="explorer-container">
@@ -100,6 +110,7 @@
                     Escolher Arquivo
                     <input type="file" id="file" name="file" accept=".pdf,.xlsx,.xls" required class="upload-input" />
                 </label>
+                <div id="fileInfo" class="file-info" style="display: none;"></div>
                 <button type="submit" class="upload-button">Enviar</button>
             </form>
         </div>
@@ -107,11 +118,24 @@
     </div>
 
     <script>
+        const fileInput = document.getElementById("file");
+        const fileInfo = document.getElementById("fileInfo");
+
+        fileInput.addEventListener("change", () => {
+            if (fileInput.files[0]) {
+                const file = fileInput.files[0];
+                fileInfo.style.display = "block";
+                fileInfo.innerText = `Arquivo selecionado: ${file.name} (Tamanho: ${(file.size / 1024).toFixed(2)} KB)`;
+            } else {
+                fileInfo.style.display = "none";
+                fileInfo.innerText = "";
+            }
+        });
+
         document.getElementById("uploadForm").addEventListener("submit", async (e) => {
             e.preventDefault();
 
             const formData = new FormData();
-            const fileInput = document.getElementById("file");
 
             if (!fileInput.files[0]) {
                 alert("Por favor, selecione um arquivo.");
