--- a/verificar_relatorios.html
+++ b/verificar_relatorios.html
@@ -76,7 +76,7 @@
     </table>
 
     <script>
-      async function buscarClientes() {
+     async function buscarClientes() {
     const cnpj = document.getElementById("cnpjInput").value.trim();
     if (!cnpj) {
         alert("Por favor, digite seu CNPJ.");
@@ -84,7 +84,7 @@
     }
     
     try {
-        const response = await fetch("https://api.enviodocs.com.br:3000/get-clientes");
+        const response = await fetch(`https://api.enviodocs.com.br:3000/get-clientes-contabilidade?cnpj_contabilidade=${cnpj}`);
         const data = await response.json();
         
         if (data.error) {
