--- a/verificar_relatorios.html
+++ b/verificar_relatorios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificação de Relatórios</title>
+    <title>Verificação de Relatório</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,7 +55,7 @@
     </script>
 </head>
 <body>
-    <h2>Verificação de Relatórios</h2>
+    <h2>Verificação de Relatório</h2>
     <input type="text" id="cnpjInput" placeholder="Digite seu CNPJ" oninput="applyCNPJMask(event)">
     <button onclick="buscarClientes()">Pesquisar</button>
     <br><br>
