--- a/verificar_relatorios.html
+++ b/verificar_relatorios.html
@@ -30,7 +30,7 @@
             text-align: center;
         }
         th {
-            background-color: #4CAF50;
+            background-color: #0B67BC;
             color: white;
         }
         .pendente {
@@ -56,7 +56,7 @@
 </head>
 <body>
     <h2>Verificação de Relatório</h2>
-    <input type="text" id="cnpjInput" placeholder="Digite seu CNPJ" oninput="applyCNPJMask(event)">
+    <input type="text" id="cnpjInput" placeholder="CNPJ da Contabilidade" oninput="applyCNPJMask(event)">
     <button onclick="buscarClientes()">Pesquisar</button>
     <br><br>
     <table id="tabelaClientes">
