--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!--Header-->
         <header class="header">
             <div class="logo">
-                <img src="assets/img/SUA-LOGO-AQUI.png" alt="">
+                <img src="assets/img/SUA-LOGO-AQUI.jpg" alt="">
             </div>
             <div class="menu">
                 <label class="hamburger">
@@ -309,7 +309,7 @@
         <footer class="footer" id="footer">
             <div class="container-footer">
                 <div class="footer-column logo-column">
-                    <img src="assets/img/SUA-LOGO-AQUI.png" alt="">
+                    <img src="assets/img/SUA-LOGO-AQUI.jpg" alt="">
                 </div>
                 <div class="footer-column menu-column">
                     <ul class="social-links">
