--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                     <ul class="social-links">
                         <li><a href="index.html"><i class=""></i> EnvioDocs </a></li>
                         <li><a href="comoFunciona.html"><i class=""></i> Como funciona</a></li>
+                        <li><a href="funcoes.html"><i class=""></i> Funções</a></li>
                     </ul>
                 </div>
                 <div class="footer-column social-column">
