--- a/funcoes.html
+++ b/funcoes.html
@@ -157,8 +157,24 @@
     <!--End Section Testimonial-->
 
     <!--Footer-->
-    <footer class="footer">
-        <p></span></p>
+    <footer class="footer" id="footer">
+        <div class="container-footer">
+            <div class="footer-column logo-column">
+                <img src="assets/img/SUA-LOGO-AQUI.png" alt="">
+            </div>
+            <div class="footer-column menu-column">
+                <ul class="social-links">
+                    <li><a href="index.html"><i class=""></i> EnvioDocs </a></li>
+                    <li><a href="comoFunciona.html"><i class=""></i> Como funciona</a></li>
+                    <li><a href="funcoes.html"><i class=""></i> Funções</a></li>
+                   
+                </ul>
+            </div>
+            <div class="footer-column social-column">
+                <ul class="social-links">
+                </ul>
+            </div>
+        </div>
     </footer>
     <!--End Footer-->
 
