--- a/comoFunciona.html
+++ b/comoFunciona.html
@@ -90,6 +90,7 @@
                     <ul class="social-links">
                         <li><a href="index.html"><i class=""></i> EnvioDocs </a></li>
                         <li><a href="comoFunciona.html"><i class=""></i> Como funciona</a></li>
+                        <li><a href="funcoes.html"><i class=""></i> Funções</a></li>
                        
                     </ul>
                 </div>
