--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                         <li><a href="index.html"><i class=""></i> EnvioDocs </a></li>
                         <li><a href="comoFunciona.html"><i class=""></i> Como funciona</a></li>
                         <li><a href="funcoes.html"><i class=""></i> Funções</a></li>
+                        <li><a href="politicaDePrivacidade"><i class=""></i> Politica de Privacidade</a></li>
                     </ul>
                 </div>
                 <div class="footer-column social-column">
