--- a/Download.html
+++ b/Download.html
@@ -50,7 +50,7 @@
 <body>
 
     <div class="container">
-        <img src="assets/img/logo.png" alt="EnvioDocs Logo" class="text">
+        <img src="/assets/img/logo.png" alt="EnvioDocs Logo" class="logo">
         <h1>Baixe o EnvioDocs agora!</h1>
         <p>Facilite o envio de documentos com o nosso aplicativo. Clique no botão abaixo para fazer o download.</p>
         <a href="https://install.appcenter.ms/users/7wm/apps/envio-docs/distribution_groups/publico" class="download-btn">Baixar Agora</a>
