--- a/Download.html
+++ b/Download.html
@@ -50,8 +50,8 @@
 <body>
 
     <div class="container">
-        <img src="/assets/img/logo.png" alt="EnvioDocs Logo" class="logo">
-        <h1>Baixee o EnvioDocs agora!</h1>
+        <img class="text" src="assets/img/logo.png" alt="">
+        <h1>Baixe o EnvioDocs agora!</h1>
         <p>Facilite o envio de documentos com o nosso aplicativo. Clique no botão abaixo para fazer o download.</p>
         <a href="https://install.appcenter.ms/users/7wm/apps/envio-docs/distribution_groups/publico" class="download-btn">Baixar Agora</a>
     </div>
