--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <a href="#sobre">SOBRE</a>
                     <a href="#portfolio">PLANOS</a>
                     <a href="#contato">CONTATO</a>
+                    <a href="CONTABILIDADE/index.html">ACESSAR SISTEMA</a>
                 </nav>
             </div>
         </header>
@@ -444,6 +445,7 @@
                         <a href="index.html">Início</a>
                         <a href="funcoes.html">Funções</a>
                         <a href="politicaDePrivacidade.html">Política de Privacidade</a>
+                        <a href="CONTABILIDADE/index.html">Acessar Sistema</a>
                     </nav>
                 </div>
                 <div class="footer-column social-column">
