--- a/CONTABILIDADE/clientes.html
+++ b/CONTABILIDADE/clientes.html
@@ -251,7 +251,7 @@
                     <div class="form-group">
                         <label for="cnpj" class="form-label">CNPJ</label>
                         <input type="text" id="cnpj" class="form-control" placeholder="00.000.000/0000-00" required>
-                        <small class="form-text text-muted">Atenção: O CNPJ será usado como login (CNPJ@gmail.com) e os 6 primeiros dígitos como senha inicial.</small>
+                        <small class="form-text text-muted">Atenção: O CNPJ será usado como login e os 6 primeiros dígitos como senha inicial.</small>
                     </div>
                     <div class="form-group" id="resetPasswordSection" style="display: none; margin-top: 20px; padding-top: 15px; border-top: 1px solid #eee;">
                         <label class="form-label">Informações de Acesso</label>
