--- a/CONTABILIDADE/comunicados.html
+++ b/CONTABILIDADE/comunicados.html
@@ -35,7 +35,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="assets/images/logo.png" alt="Logo EnvioDocs">
+                    <img src="assets/images/logo.png" alt="">
                 </div>
                 <button class="sidebar-toggle" id="sidebarToggle">
                     <i class="bi bi-list"></i>
