--- a/CONTABILIDADE/dashboard.html
+++ b/CONTABILIDADE/dashboard.html
@@ -248,7 +248,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="assets/images/logo.png" alt="EnvioDocs Logo">
+                    <img src="assets/images/logo.png" alt="">
                 </div>
                 <button class="sidebar-toggle" id="sidebarToggle">
                     <i class="bi bi-list"></i>
