--- a/CONTABILIDADE/index.html
+++ b/CONTABILIDADE/index.html
@@ -44,7 +44,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="assets/images/logo.png" alt="EnvioDocs Logo">
+                <img src="assets/images/logo.png" alt="">
             </div>
             <nav class="menu">
                 <div class="hamburger">
