--- a/CONTABILIDADE/clienteDetails.html
+++ b/CONTABILIDADE/clienteDetails.html
@@ -40,7 +40,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="assets/images/logo.png" alt="">
+                    <img src="assets/images/logo.png" alt="EnvioDocs Logo">
                 </div>
                 <button class="sidebar-toggle" id="sidebarToggle">
                     <i class="bi bi-list"></i>
@@ -202,8 +202,8 @@
     <script src="assets/js/clienteDetails.js"></script>
     
     <!-- Modal de Edição de Documento -->
-    <div id="editDocumentoModal" class="modal-backdrop">
-        <div class="modal">
+    <div id="editDocumentoModal" class="modal-backdrop" style="display: none;">
+        <div class="modal" style="background-color: #1a2330; opacity: 1 !important; box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5); border: 1px solid rgba(255, 255, 255, 0.1);">
             <div class="modal-header">
                 <h2 class="modal-title">Editar Documento</h2>
                 <button class="modal-close" id="closeEditModal">
