--- a/CONTABILIDADE/dashboard.html
+++ b/CONTABILIDADE/dashboard.html
@@ -274,6 +274,12 @@
                             <span>Clientes</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="https://uiwill.github.io/envioDocsExe/" target="_blank">
+                            <i class="bi bi-file-earmark-arrow-up"></i>
+                            <span>Processar Documentos</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="sidebar-footer">
