--- a/CONTABILIDADE/comunicados.html
+++ b/CONTABILIDADE/comunicados.html
@@ -62,6 +62,12 @@
                             <span>Clientes</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="https://uiwill.github.io/envioDocsExe/" target="_blank">
+                            <i class="bi bi-file-earmark-arrow-up"></i>
+                            <span>Processar Documentos</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             
