--- a/CLIENTES/clienteDetails.html
+++ b/CLIENTES/clienteDetails.html
@@ -865,6 +865,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="../CONTABILIDADE/assets/js/supabase.js"></script>
+    <script src="../CONTABILIDADE/assets/js/session-guard.js"></script>
     <script>
         // Variáveis globais
         let clienteData = null;
