--- a/CLIENTES/comprovantes.html
+++ b/CLIENTES/comprovantes.html
@@ -173,6 +173,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../CONTABILIDADE/assets/js/supabase.js"></script>
+    <script src="../CONTABILIDADE/assets/js/session-guard.js"></script>
     <script>
         // Aguardar o carregamento do DOM
         document.addEventListener('DOMContentLoaded', async function() {
