--- a/CONTABILIDADE/clientes.html
+++ b/CONTABILIDADE/clientes.html
@@ -418,6 +418,7 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="assets/js/supabase.js"></script>
+    <script src="assets/js/session-guard.js"></script>
     <script>
         // Aguardar o carregamento do DOM
         document.addEventListener('DOMContentLoaded', async function() {
