--- a/CONTABILIDADE/comunicados.html
+++ b/CONTABILIDADE/comunicados.html
@@ -326,6 +326,7 @@
     <!-- Scripts -->
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="assets/js/supabase.js"></script>
+    <script src="assets/js/session-guard.js"></script>
     <script src="assets/js/comunicados.js"></script>
     
     <!-- AOS -->
