--- a/CONTABILIDADE/clienteDetails.html
+++ b/CONTABILIDADE/clienteDetails.html
@@ -174,6 +174,7 @@
                         <thead>
                             <tr>
                                 <th>Imposto</th>
+                                <th>Data de Envio</th>
                                 <th>Data do Pagamento</th>
                                 <th>Valor</th>
                                 <th>Data de Vencimento</th>
